--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <div class="image-details">
                     <h2>Love Yourself</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi, voluptates odio excepturi natus tenetur dolore.</p>
-                    <h3 class="play-now"> <a href=""><i class="fa-solid fa-play"></i>Play Now</a></h3>
+                    <h3 class="play-now"> <a href=""><i class="fa-solid fa-circle-play"></i>Play Now</a></h3>
                 </div>
             </div>
             <div class="slide" id="slide3">
